[tool.poetry]
name = "mindbloom"
version = "0.1.0"
description = ""
authors = ["Abinand P <abinand0911@gmail.com>"]
readme = "README.md"
packages = [{ include = "mindbloom", from = "src" }]
# Python compatibility should match the strictest requirement (like supabase)
# Avoid just ">=3.9", instead be explicit:


[tool.poetry.dependencies]
fastapi = ">=0.115.2,<0.116.0"
supabase = "^2.15.0"
python = ">=3.10,<4.0"
dotenv = "^0.9.9"
numpy = "^2.2.4"
scikit-fuzzy = "^0.5.0"
scipy = "^1.15.2"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
